--- a/app/src/main/res/layout/news_content.xml
+++ b/app/src/main/res/layout/news_content.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <FrameLayout
+    <fragment
         android:id="@+id/news_content_fragment"
-        android:name="com.example.root.studyview.News.NewsContentFragment"
+        android:name="com.example.root.studyview.NewsPackage.NewsContentFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"/>
 
-    </FrameLayout>
 </LinearLayout>
