--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/news_title"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:ellipsize="end"
-    android:freezesText="true"
-    android:paddingLeft="10dp"
-    android:paddingTop="15dp"
-    android:paddingRight="10dp"
-    android:paddingBottom="15dp"
+    android:layout_height="wrap_content"
     android:singleLine="true"
-    android:textSize="18sp">
-
-</TextView>
+    android:ellipsize="end"
+    android:textSize="18sp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="15dp"
+    android:paddingBottom="15dp"
+    />
