--- a/app/src/main/res/layout/editbox_save.xml
+++ b/app/src/main/res/layout/editbox_save.xml
@@ -6,27 +6,9 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="350dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="145dp">
-
-        <Button
-            android:id="@+id/shanePreferencesBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="sharePerferences"
-            tools:layout_editor_absoluteX="181dp"
-            tools:layout_editor_absoluteY="213dp" />
-
-        <Button
-            android:id="@+id/getSharedBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="获取"
-            tools:layout_editor_absoluteX="228dp"
-            tools:layout_editor_absoluteY="97dp" />
+        android:layout_width="380dp"
+        android:layout_height="518dp"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/editsave"
@@ -37,6 +19,28 @@
             android:inputType="textEmailAddress"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="261dp" />
+
+        <Button
+            android:id="@+id/getSharedBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="获取"
+            tools:layout_editor_absoluteX="228dp"
+            tools:layout_editor_absoluteY="97dp" />
+
+        <Button
+            android:id="@+id/shanePreferencesBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="sharePerferences"
+            tools:layout_editor_absoluteX="181dp"
+            tools:layout_editor_absoluteY="213dp" />
+
+        <Button
+            android:id="@+id/litepalBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="litepal数据库" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
