[第一行Android]第八章。消息通知+调取摄像头拍照

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="通知" />
 
         <Button
             android:id="@+id/btn1"
@@ -38,4 +44,5 @@
             android:text="联系人读取" />
 
     </LinearLayout>
+
 </FrameLayout>
