[第一行Android]第九章SAX方式解析xml

--- a/app/src/main/res/layout/web_activity.xml
+++ b/app/src/main/res/layout/web_activity.xml
@@ -17,6 +17,12 @@
         android:layout_height="wrap_content"
         android:text="XmL Pull" />
 
+    <Button
+        android:id="@+id/sax_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="XmL SAX" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
