[第一行Android]第九章实例。HttpUtil

--- a/app/src/main/res/layout/gson_json.xml
+++ b/app/src/main/res/layout/gson_json.xml
@@ -10,4 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Gson" />
+
+    <Button
+        android:id="@+id/httpUitl_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="HTTPUTIL" />
 </LinearLayout>
