--- a/app/src/main/res/layout/service_btnchange_txet.xml
+++ b/app/src/main/res/layout/service_btnchange_txet.xml
@@ -28,6 +28,30 @@
             android:text="改变"
             tools:layout_editor_absoluteX="183dp"
             tools:layout_editor_absoluteY="3dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_startdown"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="开始下载" />
+
+            <Button
+                android:id="@+id/btn_pausedown"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="暂停下载" />
+
+            <Button
+                android:id="@+id/btn_canceldown"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="取消下载" />
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
