--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,6 +89,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="服务" />
+
+            <Button
+                android:id="@+id/btn10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="定位" />
         </LinearLayout>
 
     </LinearLayout>
