--- a/app/src/main/res/layout/baidulayout.xml
+++ b/app/src/main/res/layout/baidulayout.xml
@@ -5,11 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textLocation"
-        android:layout_width="177dp"
-        android:layout_height="113dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="4dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textLocation"
+            android:layout_width="123dp"
+            android:layout_height="match_parent"
+            android:text="TextView"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <com.baidu.mapapi.map.MapView
+            android:id="@+id/bmapView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:clickable="true" />
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
