--- a/app/src/main/res/layout/toolbarlayout.xml
+++ b/app/src/main/res/layout/toolbarlayout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:material="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -18,11 +18,11 @@
             />
     </FrameLayout>
 
-    <TextView
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#ffffcc"
-        android:text="菜单"
-        android:textSize="20sp" />
+        material:headerLayout="@layout/navigation_menu_header"
+        material:menu="@menu/navigation" />
 </android.support.v4.widget.DrawerLayout>
